--- a/backend_service/Dockerfile
+++ b/backend_service/Dockerfile
@@ -18,11 +18,13 @@ WORKDIR /app
 COPY . /app
 
 # Устанавливаем Python зависимости
-RUN pip install --no-cache-dir fastapi uvicorn pydub vosk aiofiles pyaudio aiofiles
+RUN pip install fastapi uvicorn pydub vosk aiofiles pyaudio aiofiles
 
-CMD wget -O /app/model/vosk-model-small-ru-0.22.zip https://alphacephei.com/vosk/models/vosk-model-small-ru-0.22.zip && \
-    unzip /app/model/vosk-model-small-ru-0.22.zip -d /app/model && \
-    rm /app/model/vosk-model-small-ru-0.22.zip
+# Создаем директорию для модели
+RUN mkdir -p /app/model
+
+# Скачиваем архив с моделью
+RUN wget -O /app/model/vosk-model-small-ru-0.22.zip https://alphacephei.com/vosk/models/vosk-model-small-ru-0.22.zip
 
 # Открываем порт, на котором будет работать приложение
 EXPOSE 8765
