--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,25 +13,25 @@ services:
     networks:
       - ollama-docker
 
-  ollama:
-    image: ollama/ollama:latest
-    ports:
-      - 11434:11434
-    volumes:
-      - .:/code
-      - ./ollama/ollama:/root/.ollama
-    container_name: ollama
-    pull_policy: always
-    tty: true
-    restart: always
-    runtime: nvidia # Activ GPU
-    environment:
-      - OLLAMA_KEEP_ALIVE=24h
-      - OLLAMA_HOST=0.0.0.0
-      - NVIDIA_VISIBLE_DEVICES=all
-      - NVIDIA_DRIVER_CAPABILITIES=compute,utility
-    networks:
-      - ollama-docker
+  #ollama:
+  #  image: ollama/ollama:latest
+  #  ports:
+  #    - 11434:11434
+  #  volumes:
+  #    - .:/code
+  #    - ./ollama/ollama:/root/.ollama
+  #  container_name: ollama
+  #  pull_policy: always
+  #  tty: true
+  #  restart: always
+  #  runtime: nvidia # Activ GPU
+  #  environment:
+  #    - OLLAMA_KEEP_ALIVE=24h
+  #    - OLLAMA_HOST=0.0.0.0
+  #    - NVIDIA_VISIBLE_DEVICES=all
+  #    - NVIDIA_DRIVER_CAPABILITIES=compute,utility
+  #  networks:
+  #    - ollama-docker
   nginx:
     build: ./client_app
     ports:
